# python-demo-voice-app

./: .gitignore  README.md  env.example  pyproject.toml
.github/workflows/: autoblocks_tests.yml
python_demo_voice_app/: __init__.py  cli.py  config.py  main.py  receptionist.py  voice_client.py
test_audio/: README.md
tests/: test_autoblocks_voice_app.py  test_voice_app.py  voice_evaluators.py
