[tool.poetry]
name = "python-demo-voice-app"
version = "0.1.0"
description = ""
authors = ["Adam Nolte <ajnolte12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
black = "^23.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
lint.select = ["E", "F", "I001"]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["python_demo_voice_app"]